Bug 280890 - Opera.deb breaks the packagesystem with moun-installer
Summary: Opera.deb breaks the packagesystem with moun-installer
Status: RESOLVED FIXED
Alias: None
Product: muon
Classification: Unmaintained
Component: installer (other bugs)
Version First Reported In: unspecified
Platform: Ubuntu Linux
: NOR crash
Target Milestone: ---
Assignee: Jonathan Thomas
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-08-27 18:27 UTC by Sandra
Modified: 2011-08-27 19:40 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 1.2.1, 1.2.65
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Sandra 2011-08-27 18:27:19 UTC
Version:           unspecified (using KDE 4.7.0) 
OS:                Linux

if you try to install the Opera (browser) Package (from opera.com) on Oneiric with Muon 1.2.0 it will break your packagesystem. Many other Application, like skype from skype.com dont install correctly too. 

Reproducible: Always

Steps to Reproduce:
go to opera.com and download the opera.deb, save them somewhere und click it. Now give them the passwd and install...

Actual Results:  
after a little installtime it stopps and nothing happens anymore. you can close the window with (x) and the packagesystem is broken until you type "sudo dpkg --configure -a" in a terminal

Expected Results:  
it should install the package without problems

Kubuntu Oniric (11.10) i368 (i686)
Comment 1 Jonathan Thomas 2011-08-27 19:37:28 UTC
Git commit 928a512050f38e186b34e6f06f63a9e5d711575e by Jonathan Thomas.
Committed on 27/08/2011 at 21:31.
Pushed by jmthomas into branch '1.2'.

Since deb file installation is an asynchronous process compared to installing packages via
APT, the QApt Worker's idle timeout was not being blocked during deb file installation.
This caused .deb file installations that went on for 30 seconds or longer to fail due to
the QApt Worker's idle timer timing out and quitting the process.

Fixes issues with the installation of Skype and Opera packages failing by appearing to hang.

BUG: 280890
CCMAIL: 830786@bugs.launchpad.net
FIXED-IN:1.2.1, 1.2.65

M  +7    -1    src/worker/worker.cpp
M  +3    -0    src/worker/worker.h

http://commits.kde.org/libqapt/928a512050f38e186b34e6f06f63a9e5d711575e
Comment 2 Jonathan Thomas 2011-08-27 19:37:28 UTC
Git commit bf2eec718c5d7ea8eef3ad35d375e2837dab8e94 by Jonathan Thomas.
Committed on 27/08/2011 at 21:31.
Pushed by jmthomas into branch 'master'.

Since deb file installation is an asynchronous process compared to installing packages via
APT, the QApt Worker's idle timeout was not being blocked during deb file installation.
This caused .deb file installations that went on for 30 seconds or longer to fail due to
the QApt Worker's idle timer timing out and quitting the process.

Fixes issues with the installation of Skype and Opera packages failing by appearing to hang.

BUG: 280890
CCMAIL: 830786@bugs.launchpad.net
FIXED-IN:1.2.1, 1.2.65

M  +7    -1    src/worker/worker.cpp
M  +3    -0    src/worker/worker.h

http://commits.kde.org/libqapt/bf2eec718c5d7ea8eef3ad35d375e2837dab8e94