Since deb file installation is an asynchronous process compared to installing packages via APT, the QApt Worker's idle timeout was not being blocked during deb file installation. This caused .deb file installations that went on for 30 seconds or longer to fail due to the QApt Worker's idle timer timing out and quitting the process.

Fixes issues with the installation of Skype and Opera packages failing by appearing to hang.

BUG: 280890
CCMAIL: 830786@bugs.launchpad.net
FIXED-IN:1.2.1, 1.2.65